--- a/modules/sale/web/css/sale-bill-pdf.css
+++ b/modules/sale/web/css/sale-bill-pdf.css
@@ -85,15 +85,21 @@
 .content .table-content{
 	padding: 0% 1%;
 }
+
+.content .table-content table{
+	width: 100%;
+}
+
 .content .table-content table, th, td{
 	border: 1px solid black;
 	border-collapse: collapse;
 	padding: 15px;
 	font-size: 10px;
-	text-align: center;
 }
-.content .table-content table{
-	width: 100%;
+
+.content .table-content table th{
+	text-align: left;
+	background-color: lightgray;
 }
 
 .content .mind-content{
@@ -105,7 +111,7 @@
 }
 .content .mind-content .total-amount .amount span{
 	font-weight: bold;
-	font-size: 20px;
+	font-size: 15px;
 
 }
 
@@ -136,19 +142,22 @@
 	margin-top: 2%;
 }
 
+
 .footer .footer-barcode{
 	overflow: hidden;
 	padding: 0% 1%;
 }
 
 .footer .footer-barcode-img{
-	width: 65%;
+	padding-top: 1%;
+	width: 47%;
 	float: left;
 }
 .footer .footer-barcode-data{
-	width: 30%;
+	width: 50%;
 	float: left;
 	margin-left: 3%;
+	font-size: 15px;
 }
 .text_payment_code{
 	text-align: center;
