--- a/modules/sale/web/css/sale-bill-pdf.css
+++ b/modules/sale/web/css/sale-bill-pdf.css
@@ -24,9 +24,11 @@
 	padding: 2%;
 	border-bottom: 1px solid;
 	overflow: hidden;
+
 }
 .coupon-data-client #col-1{
 	width: 65%;
+	font-size: 10px;
 }
 .coupon-data-client #col-2{
 	width: 30%;
@@ -74,6 +76,7 @@
 
 .subtitles-logo{
 	text-align: center;
+	font-size: 0.8rem;
 }
 
 .code-header{
@@ -91,8 +94,9 @@
 
 .data-header{
 	width: 50%;
-	margin-left: 10%;
+	margin-left: 15%;
 	float: left;
+	font-size: 10px;
 }
 
 .data-header p{
@@ -107,6 +111,7 @@
 	overflow: hidden;
 	border-bottom: 1px solid;
 	padding: 10px;
+	font-size: 0.8rem;
 }
 .sub-header .col-personal-data{
 	width: 48%;
@@ -116,7 +121,8 @@
 .sub-header .col-data-client{
 	width: 50%;
 	float: left;
-	margin-left: 2%;
+	margin-left: 10%;
+	font-size: 10px;
 }
 .sub-header .col-data-client .barcode-img{
 	width: 60%;
@@ -156,10 +162,11 @@
 .content .mind-content .total-amount .amount{
 	margin: 2%;
 	text-align: right;
+	font-size: 10px;
 }
 .content .mind-content .total-amount .amount span{
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 10px;
 
 }
 .content .mind-content .data-account{
@@ -183,8 +190,10 @@
 	width: 40%;
 	float: left;
 	margin-left: 5%;
-	font-size: 15px;
+	margin-top: 1%;
+	font-size: 10px;
 	font-weight: bold;
+	text-align: center;
 }	
 /*End content*/
 
@@ -196,6 +205,7 @@
 .text_payment_code{
 	text-align: center;
 	font-weight: bold;
+	font-size: 0.8rem;
 }
 
 .footer-barcode{
@@ -212,29 +222,16 @@
 #footer-col-2{
 	width: 26%;
 	float: left;
-	/*background-color: green;*/
-
 }
 
 #footer-col-3{
 	padding-top: 3%;
 	width: 45%;
 	float: left;
-	/*background-color: blue;*/
 	text-align: right;
 	font-size: 12px;
+}
 
-}
-/*
-#cae{
-	width: 50%;
-	align-items: right;
-	text-align: right;
-}
-#date-vto-cae{
-	width: 50%;
-	text-align: left;
-}
-*/
+
 /*End footer*/
 /*End Bill*/
