ticket working ver

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1424,24 +1424,39 @@ a.ui-state-default.ui-state-active {
   min-height: 75%;
 }
 
-.row .panel-default .panel-body form{
-  overflow: auto;
+
+
+#user-management-permission-view #routes-list, 
+#user-management-permission-view .col-sm-6:first-child form .row{
+  overflow: scroll;
+  overflow-x: hidden;
+  max-height: 550px;
+}
+#user-management-role-view form {
+  overflow: scroll;
+  overflow-x: hidden;
   height: 550px;
   margin-bottom: 20px;
-  width: 100%;
 }
-
-#routes-list{ terminar de hacer este ticket hijo de puta
-  overflow: auto;
+#user-management-permission-view form{
+  overflow: hidden;
   height: 550px;
   margin-bottom: 20px;
-  width: 100%;
 }
 
-.row .panel-default .panel-body button.btn.btn-primary.btn-sm{
+#user-management-role-view button.btn.btn-primary.btn-sm, 
+#user-management-permission-view button.btn.btn-primary.btn-sm{
   position:absolute;
 	bottom:20px;
 }
-.row .panel-default .panel-body .row .col-sm-3{
-  margin-left: -70px;
+#user-management-permission-view form .row .col-sm-3 button.btn.btn-primary.btn-sm{
+  position:static;
+	bottom:0px;
 }
+#user-management-permission-view form .row .col-sm-3{
+  margin-left: -25px;
+}
+
+
+
+
