--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1457,6 +1457,14 @@ a.ui-state-default.ui-state-active {
   margin-left: -25px;
 }
 
+#sale-bill-index div.form-group{
+  margin-right: 0;
+}
+/* .input-group is the div behing the input tag. practically invisible */
+#sale-bill-index .col-sm-8 .col-sm-6 .input-group{
+  margin : 0;
+  width: 100%;
+}
 
 
 
