--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1457,6 +1457,9 @@ a.ui-state-default.ui-state-active {
   margin-left: -25px;
 }
 
+
+/* collapse menu properties */
+
 #sale-bill-index div.form-group{
   margin-right: 0;
 }
@@ -1466,5 +1469,15 @@ a.ui-state-default.ui-state-active {
   width: 100%;
 }
 
+#sale-bill-index div.bill-index div.row{
+  display: flex;
 
+  justify-content: space-between;
+
+}
+
+#sale-bill-index div .text-right{
+  display: flex;
+  justify-content: space-between;
+}
 
