--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1481,3 +1481,7 @@ a.ui-state-default.ui-state-active {
   justify-content: space-between;
 }
 
+#reports-reports-discount .col-md-12{
+  background: rgb(236, 254, 255);
+  
+}
