--- a/web/css/navbar.css
+++ b/web/css/navbar.css
@@ -6,9 +6,8 @@
   --bg-secondary: #141418;
   --accent: #ff8944;
 
-  --bootstrap-dark : #222222;
-  --bootstrap-light : #9D9D9D;
-
+  --bootstrap-dark: #222222;
+  --bootstrap-light: #9d9d9d;
 }
 body {
   margin: 0;
@@ -46,30 +45,30 @@ main {
   padding: 0;
 }
 .custom-flex-start {
-    justify-content: flex-start;
-    left: 0;
+  justify-content: flex-start;
+  left: 0;
 }
 .custom-flex-end {
   justify-content: flex-end;
   right: 0;
 }
 .custom-flex-space-around {
-    justify-content: space-around;
+  justify-content: space-around;
 }
 
 .search-container {
-  --width-and-height : 1.8rem;
+  --width-and-height: 1.8rem;
   --border-radius-collapsed: 50%;
-  --searchbar-width : 8rem;
-  margin: 0 .4rem;
+  --searchbar-width: 8rem;
+  margin: 0 0.4rem;
   position: relative;
   width: var(--width-and-height);
   height: var(--width-and-height);
   border-radius: 1rem;
-  box-shadow: 0 0 0 .07rem rgb(255, 255, 255);
+  box-shadow: 0 0 0 0.07rem rgb(255, 255, 255);
   transition: 0.2s;
   overflow: hidden;
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 .search-container.active {
@@ -85,11 +84,11 @@ main {
   align-items: center;
 }
 
-.search-icon span{
+.search-icon span {
   color: rgb(255, 255, 255);
 }
-.search-icon:hover span{
-  color:#222222;
+.search-icon:hover span {
+  color: #222222;
 }
 .search-container .close-icon {
   position: relative;
@@ -99,14 +98,14 @@ main {
   justify-content: center;
   align-items: center;
 }
-.close-icon span{
+.close-icon span {
   position: absolute;
-  top: .4rem;
-  right: .2rem;
+  top: 0.4rem;
+  right: 0.2rem;
   color: var(--bootstrap-light);
   transform: rotate(45deg);
 }
-.close-icon span:hover{
+.close-icon span:hover {
   color: #000;
 }
 .search-container .search-icon {
@@ -117,7 +116,7 @@ main {
   height: var(--width-and-height);
   background: var(--bootstrap-light);
 
-/*   background: #3ec45b;
+  /*   background: #3ec45b;
  */
   border-radius: var(--border-radius-collapsed);
   display: flex;
@@ -125,7 +124,6 @@ main {
   align-items: center;
   z-index: 1000;
 }
-
 
 .search-bar {
   position: absolute;
@@ -135,15 +133,19 @@ main {
   height: var(--width-and-height);
   border: none;
   outline: none;
-  
-  font-size: .85rem;
-  font-family:'latoregular';
 
+  font-size: 0.85rem;
+  font-family: "latoregular";
 }
 
 .highlight {
-/*   border: solid .1rem rgba(100, 255, 55, 0.5);
+  /*   border: solid .1rem rgba(100, 255, 55, 0.5);
  */
-  box-shadow: inset .15rem 0 var(--accent);
+  box-shadow: inset 0.15rem 0 var(--accent);
 }
 
+.navbar-header-custom-css {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
