--- a/modules/westnet/web/css/empty-ads-pdf.css
+++ b/modules/westnet/web/css/empty-ads-pdf.css
@@ -14,6 +14,9 @@ body {
     height: 180px;
     margin-bottom: 20px;
 }
+.no-margin-bottom {
+    margin-bottom:0px;
+}
 .bg-white {
     background: #ffffff;
     border-radius: 15px;
@@ -26,7 +29,13 @@ body {
     padding-bottom: 0px;
 }
 .w-50 {
-    width: 49%;
+    width: 48.5%;
+}
+.m-r-5{
+    margin-right: 5px;
+}
+.m-l-5{
+    margin-left: 5px;
 }
 .float-left {
     float: left;
@@ -59,6 +68,21 @@ body {
     width: 98px;
     height: 51px;
     background: #f47dff;
+}
+.instalation-percentages{
+    width:32%;
+    direction:rtl;
+    text-align:justify;
+    font-size: 10px;
+    padding-right: 8px;
+}
+.justify-right{
+    width: 66%;
+    direction:rtl;
+    text-align:justify;
+}
+.red{
+    border: 2px solid rgb(255, 1, 1);
 }
 
 
