v5 . Se termina de implementar impresion para ADS vacios para la empresa BIGWAY. (selecionar en items de config desde la app)

--- a/modules/westnet/web/css/empty-ads-pdf.css
+++ b/modules/westnet/web/css/empty-ads-pdf.css
@@ -192,3 +192,10 @@ ol{
 li{
     margin-top: 4px;
 }
+.signature{
+    text-align: center;
+    border-top: 2px solid #454545;
+    width: 262px;
+    font-size: 14px;
+    margin-top: 80px;
+}
