v1 finished work on empty ADS for bigway

--- a/modules/westnet/web/css/empty-ads-pdf.css
+++ b/modules/westnet/web/css/empty-ads-pdf.css
@@ -9,6 +9,9 @@ p {
     margin-top: .3em;
     margin-bottom: .3em;
 }
+.current-date {
+    font-size: 14px;
+}
 
 .sections-wrapper {
     padding: 10px;
