added size cap for company logo on site-index. Also inverted where alerts are shown on the index page

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1504,3 +1504,7 @@ a.ui-state-default.ui-state-active {
   background: hsla(192, 100%, 85%, 0.26);
   
 }
+
+#site-index .company-logo{
+  width: 15rem;
+}
